--- a/Css/paginaPrincipal.css
+++ b/Css/paginaPrincipal.css
@@ -59,6 +59,7 @@ body{
     margin-right: -2.5%;
 }
 .card {
+    padding-top: 2%;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     width: 33%;
