--- a/Css/login.css
+++ b/Css/login.css
@@ -1,5 +1,5 @@
 body{
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .btnRegistrarse{
     right: 2%;
@@ -9,7 +9,7 @@ body{
 .login{
     margin-bottom: 1%;
     margin-top: 0%;
-    background-color: rgb(243, 171, 77);
+    background-color: rgb(243, 144, 16);
     padding: .5%;
 }
 .item{
@@ -34,7 +34,7 @@ body{
     margin-top: 1%;
     margin-bottom: 2%;
     font-size: large;
-    background-color: rgb(243, 171, 77);
+    background-color: rgb(243, 144, 16);
     border-radius: 5px;
     border: 0px solid;
     padding: 0.5%;
@@ -54,5 +54,5 @@ body{
     margin-left: 15%;
 }
 .card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 20px 30px 0 rgba(0,0,0,0.2);
 }
