--- a/Css/paginaPrincipal.css
+++ b/Css/paginaPrincipal.css
@@ -1,5 +1,6 @@
 body{
     margin: 0px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 .ImagenTituloNoticia{
     display: flex;
@@ -16,6 +17,7 @@ body{
 .ComidasDeCafeterias{
     display: flex;
     justify-content: space-evenly;
+    background-color: #f6f6f6;
 }
 .DiferentesMenus{
     border: 1px solid black;
@@ -31,13 +33,23 @@ body{
 .HacerPedido{
     display: flex;
     justify-content: space-between;
+    margin-right: 0.5%;
+    background-color: rgb(243, 144, 16);
+}
+.HacerPedido h2{
+    margin-left: 4%;
+    margin-right: -4%;
+    color: white;
+}
+.HacerPedido button{
+    margin-top: 15%;
+    margin-right: 10%;
+    margin-left: -10%;
 }
 .HacerPedido button a{
     text-decoration: none;
     color: black;
-}
-.HacerPedido button{
-    padding-top: 0%;
+    font-size: large;
 }
 .FotoComida{
     margin-left: 17.5%;
@@ -49,24 +61,23 @@ body{
 .Noticias{
     width: 40%;
     margin-left: 2.5%;
-    margin-right: 2.5%;
 }
 .Noticias p, h1{
     text-align: center;
 }
 .Menu{
-    width: 71%;
-    margin-right: -2.5%;
+    width: 60%;
+    margin-left: 5%;
 }
 .card {
     padding-top: 2%;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 10px 15px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     width: 33%;
     margin: 1.25%;
 }
 .card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 20px 30px 0 rgba(0,0,0,0.2);
 }
 .RadioButtons input{
     transition: all .35s;
@@ -76,16 +87,67 @@ hr{
     margin-left: 2.5%;
     margin-right: 2.5%;
 }
+nav{
+    display: flex;
+    justify-content: center;
+    background-color: rgb(243, 144, 16);
+    margin-top: 2%;
+    font-size: large;
+}
+nav a{
+    text-decoration: none;
+    padding-left: 3%;
+    padding-right: 3%;
+    padding-top: 0.6%;
+    padding-bottom: 0.6%;
+    color: white;
+    transition: all 0.35s;
+}
+nav a:hover{
+    background-color: rgb(206, 117, 0);
+}
+.navEspecial{
+    background-color: rgb(206, 117, 0);
+}
 .NomCafeteria{
     margin-left: 2.5%;
 }
 .CafCentral, .CafEdi1PB, .CafEdi1P2, .CafFisc{
     display: flex;
     align-items: center;
-    background-color: rgb(118, 118, 118);
+    background-color: #2d2d2d;
     color: white;
 }
 .CafCentral h1, .CafEdi1PB h1, .CafEdi1P2 h1, .CafFisc h1{
     margin-left: 10%;
     margin-right: 12%;
+}
+.fotoUser{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin-top: -5.2%;
+}
+.Carrito{
+    border-right-color: black;
+    margin-right: 2%;
+}
+.fotoUser .FPerfil{
+    margin-left: 1%;
+    margin-right: 1%;
+    border-radius: 50%;
+    border: 2px solid black;
+    border-left: black;
+    border-top: black;
+}
+.Titulo{
+    margin-bottom: 0%;
+    background-color: rgb(243, 144, 16);
+    padding: .5%;
+}
+.radios{
+    margin-bottom: 1.5%;
+    margin-top: -1.5%;
+    display: flex;
+    justify-content: center;
 }
