--- a/Css/footerHeader.css
+++ b/Css/footerHeader.css
@@ -5,8 +5,8 @@ body{
     display: flex;
     align-items: center;
     background-color: rgb(243, 144, 16);
-    padding-top: 2.5%;
-    padding-bottom: 2%;
+    padding-top: 3.5%;
+    padding-bottom: 3.5%;
     color: white;
 }
 .footer img{
@@ -14,7 +14,7 @@ body{
     border-radius: 50%;
 }
 .footer h3{
-    font-size: medium;
+    font-size: small;
     margin-left: 2.5%;
 }
 .header{
@@ -34,4 +34,26 @@ body{
 .header h1{
     margin-top: -3%;
     color: rgb(243, 144, 16);
+}
+.footerP1{
+    margin-left: 15%;
+    font-size: small;
+    text-align: right;
+    align-self: flex-start;
+    margin-top: 1%;
+    border: 2px solid transparent;
+    border-right-color: white;
+    padding-right: 2%;
+}
+.footerP2{
+    font-size: small;
+    margin-left: 2%;
+    text-align: left;
+    align-self: flex-start;
+    margin-top: 1%;
+}
+.footerP1 a, .footerP2 a{
+    text-decoration: none;
+    color: white;
+    margin-bottom: 0.2%;
 }
