--- a/Css/paginaPrincipal.css
+++ b/Css/paginaPrincipal.css
@@ -75,6 +75,7 @@ body{
     transition: 0.3s;
     width: 33%;
     margin: 1.25%;
+    max-height: 20%;
 }
 .card:hover {
     box-shadow: 0 20px 30px 0 rgba(0,0,0,0.2);
@@ -150,4 +151,7 @@ nav a:hover{
     margin-top: -1.5%;
     display: flex;
     justify-content: center;
+}
+.radios input:hover{
+    cursor: pointer;
 }
