--- a/Css/estadisticas.css
+++ b/Css/estadisticas.css
@@ -14,6 +14,13 @@
     font-size: large;
     right: 0%;
 }
+.TituloCompleto{
+    background-color: #2d2d2d;
+    color: white;
+    padding-top: 1.9%;
+    padding-bottom: 1.9%;
+    font-size: xx-large;
+}
 table, tr, td{
     border: 1px solid black;
     font-size: x-large;
