--- a/CSS/Perfil.css
+++ b/CSS/Perfil.css
@@ -9,22 +9,24 @@ body{
     justify-content: center;
 }
 
-/*Formulario*/
+    /*Formulario*/
+
 .contMain-form{
     width: 100%;
-    max-width: 620px;
-    height: 18.7rem;
+    max-width: 650px;
+    height: 19rem;
     display: flex;
     justify-content: center;
     border: 1px solid;
     border-radius: 3px;
 }
 
-/*Menu del formulario*/
+    /*Menu del formulario*/
+
 .contMain-form-menu{
     min-width: 6rem;
     display: flex;
-    margin: .3rem .3rem;
+    margin: .3rem .2rem;
     justify-content: flex-start;
 }
 
@@ -37,7 +39,8 @@ body{
     border-style: solid;
 }
 
-/*Contenido del formulario*/
+    /*Contenido del formulario*/
+
 .contMain-form-contenido{
     display: flex;
     flex-wrap: wrap;
@@ -77,17 +80,18 @@ body{
 }
 
 ._form-contenido-info{
-    max-width: 23rem;
+    max-width: 25.5rem;
     height: auto;
     min-height: 15rem;
     display: flex;
     flex-wrap: wrap;
+    flex-direction: row;
     align-content: center;
 }
 
-._form-contenido-info input{
-    width: 8rem;
-    padding: .2rem;
+.campo input{
+    width: 10rem;
+    padding: .1rem .2rem;
 }
 
 .campo{
@@ -101,13 +105,19 @@ body{
     justify-content: right;
 }
 
-/*Clases generales*/
+    /*Clases generales*/
+
 .flex-column{
     display: flex;
     flex-direction: column;
 }
 
-/*input file*/
+.invisible{
+    display: none;
+}
+
+    /*input file*/
+
 .custom-input-file {
     background-color: #d1cfd1;
     color: #222;
@@ -115,9 +125,9 @@ body{
     font-size: 16px;
     font-weight: bold;
     margin: 0 auto 0;
-    min-height: 15px;
+    min-height: 12px;
     overflow: hidden;
-    padding: 5px 0;
+    padding: 3px 0;
     position: relative;
     width: 6rem;
     text-align: center;
@@ -137,4 +147,5 @@ body{
    right: -1000px;
    top: -1000px;
   }
+
 
