--- a/Css/drpdwn.css
+++ b/Css/drpdwn.css
@@ -1,10 +1,12 @@
 /* Dropdown Button */
 .dropbtn {
     background-color: rgb(243, 144, 16);
-    color: black;
+    color: white;
     padding: 16px;
     font-size: 16px;
     border: none;
+    transition: all 0.35s;
+    border-radius: 3px;
   }
   
   /* The container <div> - needed to position the dropdown content */
