--- a/Css/login.css
+++ b/Css/login.css
@@ -34,16 +34,19 @@ body{
     margin-top: 1%;
     margin-bottom: 2%;
     font-size: large;
-    background-color: rgb(243, 144, 16);
-    border-radius: 5px;
+    background-color: #f39010;
+    border-radius: 2px;
+    color: white;
     border: 0px solid;
     padding: 0.5%;
     transition: all 0.35s;
     border: 1px solid white;
+    padding-left: 2%;
+    padding-right: 2%;
 }
 .botones:hover{
     transition: all 0.35s;
-    background-color: rgb(243, 144, 16);
+    background-color: rgb(206, 117, 0);
     border: 1px solid white;
 }
 .card {
