Página de hacer Pedidos con css

--- a/Css/estadisticas.css
+++ b/Css/estadisticas.css
@@ -19,7 +19,7 @@
     color: white;
     padding-top: 1.9%;
     padding-bottom: 1.9%;
-    font-size: xx-large;
+    font-size: x-large;
 }
 table, tr, td{
     border: 1px solid black;
