Arreglo de colores y @media 600px
Colores de naranja a morado
Sombra a las imágenes png
@media para el nav o divs de las comidas
Bold del footer

--- a/Css/drpdwn.css
+++ b/Css/drpdwn.css
@@ -1,6 +1,6 @@
 /* Dropdown Button */
-.dropbtn {
-    background-color: rgb(243, 144, 16);
+.dropbtn{
+    background-color: #68086c;
     color: white;
     padding: 16px;
     font-size: 16px;
@@ -41,6 +41,6 @@
   
   /* Change the background color of the dropdown button when the dropdown content is shown */
   .dropdown:hover .dropbtn {
-      background-color: rgb(207,118,0);
+      background-color: #51034f;
       color: white;
     }
