--- a/Css/estadisticas.css
+++ b/Css/estadisticas.css
@@ -57,7 +57,7 @@ table{
     width: 90%;
 }
 thead, .Totales{
-    background-color: rgb(243, 144, 16);
+    background-color: #68086c;
     color: white;
 }
 tr{
