--- a/Css/formHacerPedido.css
+++ b/Css/formHacerPedido.css
@@ -22,7 +22,7 @@
     border: 2px solid black;
 }
 .barraLateral h2{
-    background-color: rgb(243, 144, 16);
+    background-color: #68086c;
     color: white;
     padding-top: 2%;
     padding-bottom: 2%;
@@ -33,7 +33,7 @@
     border: 2px solid black;
 }
 .otraBarra h2{
-    background-color: rgb(243, 144, 16);
+    background-color: #68086c;
     color: white;
     padding-top: 0.8%;
     padding-bottom: 0.8%;
