--- a/Css/login.css
+++ b/Css/login.css
@@ -13,9 +13,7 @@
     font-family: "Poppins", sans-serif;
     font-size: 1.6rem; }
   
-  p {
-    color: #FFFFFF;
-    font-size: 2rem; }
+ 
   
     span{
       color: #FFFFFF;
@@ -108,6 +106,14 @@
           font-size: 1.9rem;
           
         
+        }
+        form{
+          margin-bottom: 5rem;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          flex-direction: column;
+          gap: 2rem;
         }
         
         
@@ -229,4 +235,24 @@ background-size: cover;
           margin-left: -20rem;
         }
 
-     
+        .enlaces{
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          flex-direction: column;
+          gap: 1rem;
+        }
+       
+        .yet-olv{
+         color: white;
+          padding: 0.2rem;
+          border-radius: 2rem 2rem 2rem 2rem;
+        }
+        .yet-olv a{
+          color: white;
+        }
+
+        .yet-olv a:hover{
+          text-decoration: underline;
+          color:#e7e7e7;
+        }
