--- a/Css/drpdwn.css
+++ b/Css/drpdwn.css
@@ -3,7 +3,7 @@
     background-color: #68086c;
     color: white;
     padding: 16px;
-    font-size: 16px;
+    font-size: 1vw;
     border: none;
     transition: all 0.35s;
     border-radius: 3px;
