--- a/Css/footerHeader.css
+++ b/Css/footerHeader.css
@@ -1,6 +1,4 @@
-body{
-    margin: 0px;
-}
+
 .footer{
     display: flex;
     align-items: center;
@@ -20,25 +18,29 @@ body{
 }
 .header{
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-evenly;
+    align-items: center;
     align-items: center;
     padding-top: 0.2%;
 }
+.imagen{
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
 .header img{
-    margin-left: 12%;
+    
     border-radius: 50%;
 }
 .header div{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    margin-left: 1%;
+   
 }
 .header h1{
-    margin-top: -3%;
+    margin-top: 1%;
     color: #68086c;
 }
-nav a{
-    font-size: 1vw;
-}
+
 .merror{
     font-size: x-large;
     text-shadow: 0vw 0vw 35px;
@@ -64,3 +66,65 @@ nav a{
     color: white;
     margin-bottom: 0.2%;
 }
+
+.imagen p{
+    font-size: 1.2rem;
+    margin-left: 1%;
+    margin-top: 1%;
+}
+
+
+
+.block.author {
+    background: #f7f7fe;
+  }
+
+  .block.author .block-title {
+      
+    color: #4c4954;
+  }
+
+  .author-card {
+    display: flex;
+    align-items: center;
+    gap: 0.75rem;
+    padding: 0.5;
+    min-width: 14rem;
+    border-color: #4c4954;
+    border-radius: 0.5rem;
+    color: #4c4954;
+    background: #ffffff;
+    box-shadow: 0 45px 75px rgba(58, 35, 91, 0.09);
+  }
+
+  .author-img {
+    width: 3rem;
+    height: 3rem;
+  }
+
+  .author-h2 {
+    margin: 0 0 2px;
+    line-height: 1;
+    font-weight: 600;
+    font-size: 0.975rem;
+  }
+
+  .author-h3 {
+    margin: 0;
+    line-height: 1;
+    font-weight: 600;
+    font-size: 1rem;
+    color: #a19eab;
+  }
+
+  .block-component {
+display: flex;
+align-items: center;
+justify-content: center;
+
+}
+.a{
+    margin-right: 5%;
+    border-radius: 0.4rem;
+}
+
