--- a/Css/footerHeader.css
+++ b/Css/footerHeader.css
@@ -16,18 +16,28 @@
     font-weight: normal;
     font-size: 1vw;
 }
+@media (min-width: 768px){
 .header{
     display: flex;
-    justify-content: space-evenly;
+    justify-content:space-between;
     align-items: center;
-    align-items: center;
-    padding-top: 0.2%;
 }
+
+
+} 
+
+
+
 .imagen{
     display: flex;
     align-items: center;
     justify-content: flex-start;
 }
+.header .titulo{
+    margin-right: 2%;
+    font-size: 1.2rem;
+}
+
 .header img{
     
     border-radius: 50%;
