Cambios en tablas y estética

--- a/Css/estadisticas.css
+++ b/Css/estadisticas.css
@@ -68,7 +68,7 @@ th{
 }
 .TituloTabla{
     margin-left: 5%;
-    margin-top: -0.5%;
+    margin: 0 0 1% 2.5%;
 }
 .card, .card2{
     padding-top: 2%;
