--- a/Css/paginaPrincipal.css
+++ b/Css/paginaPrincipal.css
@@ -271,6 +271,15 @@ nav a:hover{
 .btnHacerPedido:hover{
     background-color: #51034f;
 }
+.soloCuatro{
+    width: 109%;
+    background-color: #51034f;
+    justify-content: space-around;
+}
+.soloCuatro .card{
+    width: 22%;
+    float: left;
+}
 @keyframes hacerPedido{
     0%{
         border: 4px solid blue;
@@ -326,6 +335,9 @@ tr th, tr td{
     .dropbtn{
         font-size: 1.8vw;
     }
+    .soloCuatro .card{
+        width: 30%;
+    }
     nav{    
         font-size: 1.6vw;
         padding: 2% 0%;
@@ -360,7 +372,6 @@ tr th, tr td{
     width: 150px;
     height: 140px;
 }
-
 @media (min-width: 768px) {
     .parent {
         display: grid;
@@ -370,7 +381,7 @@ tr th, tr td{
         grid-row-gap: 0px;
         gap: 1rem;
     }
-    
+
     .div1 { grid-area: 1 / 1 / 3 / 7; }
     .div2 { grid-area: 3 / 1 / 7 / 5; }
     .div3 { grid-area: 3 / 5 / 5 / 7; }
@@ -417,8 +428,9 @@ tr th, tr td{
         
 .nav li{
     opacity: 0;
+    font-size: 1.5vw;
 }
-        
+
 .ul-active{
     transform: translateX(0%);
 }    
@@ -446,4 +458,15 @@ tr th, tr td{
 .div3,.div4 {
     margin-right: 2%;
 }
-       
+.ab *{
+    color: #e8e8e8;
+    background-color: #68086c; 
+    border-top-left-radius: 50px; 
+    border-bottom-left-radius: 50px; 
+}
+.ab h2{
+    color: white;
+}
+.me{
+    padding: 0 5% 0 10%;
+}
