--- a/Css/paginaPrincipal.css
+++ b/Css/paginaPrincipal.css
@@ -278,9 +278,13 @@ nav a:hover{
     background-color: #51034f;
 }
 .soloCuatro{
-display: flex;
-align-items: center;
+    width: 109%;
+    background-color: #51034f;
     justify-content: space-around;
+}
+.soloCuatro .card{
+    width: 22%;
+    float: left;
 }
 
 @keyframes hacerPedido{
