--- a/Css/footerHeader.css
+++ b/Css/footerHeader.css
@@ -43,7 +43,7 @@
     border-radius: 50%;
 }
 .header div{
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: "Euclid Circular A", Poppins;
    
 }
 .header h1{
