--- a/Css/paginaPrincipal.css
+++ b/Css/paginaPrincipal.css
@@ -1,6 +1,6 @@
 body{
     margin: 0px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: "Euclid Circular A", Poppins;
     font-size: 1vw;
     overflow-x: hidden;
 }
