--- a/Css/menu izquierda.CSS
+++ b/Css/menu izquierda.CSS
@@ -1,3 +1,6 @@
+body{
+  font-family: "Euclid Circular A", Poppins;
+}
 .LBel{
     width: 3.4rem;
     height: 2.0rem;
@@ -6,7 +9,6 @@
     position: absolute;
     top: 50%;
     left: 5%;
-    font-family: sans-serif;
     font-size: 2rem;
     color: white;
     text-align: center;
@@ -51,7 +53,7 @@ li:hover{
     border-width: 0 0.1rem;
 }
 .table {
-    font-family: Arial, Helvetica, sans-serif;
+  font-family: "Euclid Circular A", Poppins;
   }
   
   .table thead {
