--- a/Css/drpdwn.css
+++ b/Css/drpdwn.css
@@ -44,3 +44,46 @@
       background-color: #51034f;
       color: white;
     }
+
+    .styled-table {
+      align-items: center;
+      color: #595f6e!important;
+      overflow-x :auto ;
+      border-collapse: collapse ;
+      margin: 8rem auto;
+      font-size: 0.9em;
+      font-weight: bold;
+      min-width: 100px;
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+    }
+    
+    .styled-table thead tr {
+      background-color: purple !important;
+      color: #ffffff !important;
+      text-align: left;
+    }
+    
+    .styled-table th,
+    .styled-table td {
+      
+        padding: 12px 15px !important;
+    }
+    
+    .styled-table tbody tr {
+      border-bottom: 1px solid transparen !important;
+    }
+    
+    .styled-table tbody tr:nth-of-type(even) {
+      background-color: #F3F3F3 !important;
+      color: #01987A;
+    }
+    
+    .styled-table tbody tr:last-of-type {
+      border-bottom: 2px solid gray !important;
+    }
+    
+    .styled-table tbody tr.active-row {
+      font-weight: bold ;
+      color: #eb0c0c !important;
+    }
+    
