--- a/Css/paginaPrincipal.css
+++ b/Css/paginaPrincipal.css
@@ -290,11 +290,14 @@ nav a:hover{
     width: 100%;
     justify-content: space-around;
 }
-.soloTres1 .card, .soloTres2 .card{
+.soloTres1 .card{
     width: 30.5%;
     float: left;
 }
-
+.soloTres2 .card{
+    width: 47%;
+    float: left;
+}
 @keyframes hacerPedido{
     0%{
         border: 4px solid blue;
