--- a/CSS/Perfil.css
+++ b/CSS/Perfil.css
@@ -114,6 +114,8 @@ place-items: center;
 
 .outline-img {
   width: 100%;
+  height: 100%;
+  object-fit:cover;
   border-radius: 50%;
   border: .25rem solid #1a1a1a;
 }
